# YahooFinanceGolang

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp  requirements.txt
cpp/libs/: CMakeLists.txt
cpp/libs/Download/: CMakeLists.txt  download.cpp  download.h  download.hpp
cpp/libs/ExcelReader/: CMakeLists.txt  reader.cpp  reader.hpp
go/: go.mod  main.go
libs/Download/: download.go
libs/ExcelReader/: reader.go
